<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="com.nbcc.assignment1.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameFragment">

        <TextView
            android:id="@+id/questionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:text="@{vm.question}"
            app:layout_constraintBottom_toTopOf="@+id/btnTrue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnTrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="32dp"
            android:text="@string/true_button_text"
            android:onClick="@{() -> vm.tryAnswer(true)}"
            android:enabled="@{vm.enableButtons ? true : false}"
            app:layout_constraintBottom_toTopOf="@+id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnFalse" />

        <Button
            android:id="@+id/btnCheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.onCheat()}"
            android:text="@string/cheat_button_text"
            android:enabled="@{vm.enableButtons ? true : false}"
            app:layout_constraintBottom_toTopOf="@+id/scoreText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBack" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="75dp"
            android:text="@string/next_button_text"
            android:onClick="@{() -> vm.onNext()}"
            app:layout_constraintBottom_toTopOf="@+id/btnCheat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            app:layout_constraintTop_toBottomOf="@+id/btnFalse" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:text="@string/back_button_text"
            android:onClick="@{() -> vm.onBack()}"
            app:layout_constraintBottom_toTopOf="@+id/btnCheat"
            app:layout_constraintEnd_toStartOf="@+id/btnNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTrue" />

        <Button
            android:id="@+id/btnFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginBottom="32dp"
            android:text="@string/false_button_text"
            android:onClick="@{() -> vm.tryAnswer(false)}"
            android:enabled="@{vm.enableButtons ? true : false}"
            app:layout_constraintBottom_toTopOf="@+id/btnBack"
            app:layout_constraintEnd_toStartOf="@+id/btnTrue"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textSize="30sp"
            android:text="@{@string/score_format(vm.scoreString)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Score: 0/0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>